--- a/data/fixtures/jobs.yml
+++ b/data/fixtures/jobs.yml
@@ -19,7 +19,7 @@ JobeetJob:
     is_activated: true
     token:        job_sensio_labs
     email:        job@example.com
-    expires_at:   '2008-10-10'
+    expires_at:   '2058-10-10'
 
   job_extreme_sensio:
     JobeetCategory:  design
@@ -45,4 +45,34 @@ JobeetJob:
     is_activated: true
     token:        job_extreme_sensio
     email:        job@example.com
-    expires_at:   '2008-10-10'
+    expires_at:   '2058-10-10'
+
+  expired_job:
+    JobeetCategory: programming
+    type: part-time
+    company:        Sensio Labs
+    position:       Web Developer
+    location:       Paris, France
+    description:    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    how_to_apply:   Send your resume to lorem.ipsum [at] dolor.sit
+    is_public:      true
+    is_activated:   true
+    created_at:     '2005-12-01 00:00:00'
+    expires_at:     '2008-10-10'
+    token:          job_expired
+    email:          job@example.com
+
+<?php for ($i = 100; $i <= 130; $i++): ?>
+  job<?php echo $i ?>:
+    JobeetCategory: programming
+    company: Company <?php echo $i."\n" ?>
+    position: Web Developer
+    location: Paris, France
+    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    how_to_apply: |
+     Send your resume to lorem.ipsum [at] company_<?php echo $i ?>.sit
+    is_public: true
+    is_activated: true
+    token: job_<?php echo $i."\n" ?>
+    email: job@example.com
+<?php endfor ?>
